UK-WHO bulk endpoint
